fix(Navigation/MapNode): truncate long names with ellipsis [YTFRONT-3913]

--- a/packages/ui/src/ui/pages/navigation/content/MapNode/MapNodesTable.scss
+++ b/packages/ui/src/ui/pages/navigation/content/MapNode/MapNodesTable.scss
@@ -7,7 +7,9 @@
 
     &__name-cell-text {
         flex-grow: 1;
+        flex-shrink: 1;
         overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     &__name-cell-tags {
